fixed scrollbar and footer display issue

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: visible;
   height: 100%;
   min-height: 100vh;
   background-color: var(--pea-red);
@@ -35,15 +36,17 @@ html {
 body {
   margin: 0;
   padding: 0;
-  min-height: 100%;
-  height: 100%;
-  overflow: auto;
-  position: relative;
-  scrollbar-width: none;
 }
+
 body::-webkit-scrollbar {
-  display: none;
+  width: 6px;
 }
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(166, 166, 166);
+  border-radius: 10px;
+}
+
 
 .footer {
   bottom: 0;
